using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace JeuDeDes
{
    public class Game
    {
        public Board Board { get; set; }

        public void Initialize()
        {
            throw new NotImplementedException();
        }

        public Die CreateDie(int face)
        {
            throw new NotImplementedException();
        }
    }
}
